Bug 125215 - Assertion when closing Database/Advanced Settings
Summary: Assertion when closing Database/Advanced Settings
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: regression
: 125214 (view as bug list)
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2019-05-11 15:59 UTC by Julien Nabet
Modified: 2019-05-13 19:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (10.97 KB, text/plain)
2019-05-11 16:02 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-05-11 15:59:04 UTC
Description:
On pc Debian x86-64 with master sources updated today, I got an assertion

Steps to Reproduce:
1. Launch Base and create a brand new odb HSQL embedded file with by default options
2. Menu Edit/Database/Advance Settings...
3. Click Cancel button

Actual Results:
Assertion

Expected Results:
No assertion


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Julien Nabet 2019-05-11 16:00:38 UTC
Noel: noticing 003d11f410b7e515981b3efbd65d936d94d87121, thought you might be interested in this one.
Comment 2 Julien Nabet 2019-05-11 16:01:22 UTC
*** Bug 125214 has been marked as a duplicate of this bug. ***
Comment 3 Julien Nabet 2019-05-11 16:02:25 UTC
Created attachment 151308 [details]
bt with debug symbols
Comment 4 Julien Nabet 2019-05-11 16:07:43 UTC
BTW, I also noticed this on console:
warn:legacy.osl:22298:22298:svtools/source/uno/genericunodialog.cxx:281: OGenericUnoDialog::OnDialogDying: where does this come from?
Comment 5 Alex Thurgood 2019-05-13 06:29:08 UTC
@Julien : is this a debug or non-debug enabled version ?
Comment 6 Alex Thurgood 2019-05-13 06:36:41 UTC
Confirmed with my own master build

Version: 6.3.0.0.alpha0+
Build ID: 03a2f3ec4316a3953c2fa40e6e59c2ebbc824d09
CPU threads: 4; OS: Mac OS X 10.14.4; UI render: default; VCL: osx; 
Locale: fr-FR (fr_FR.UTF-8); UI-Language: en-US
Calc: threaded
Comment 7 Alex Thurgood 2019-05-13 06:42:37 UTC
lldb output :

Process 1395 launched: '/Users/Shared/LO/core/instdir/LibreOfficeDev.app/Contents/MacOS/soffice' (x86_64)
Process 1395 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0x3f800018)
    frame #0: 0x000000010150e654 libsvllo.dylib`SfxPoolItemArray_Impl::erase(std::__1::__wrap_iter<SfxPoolItem* const*>) [inlined] CompareSortablePoolItems(lhs=0x00000001810bda20, rhs=<unavailable>) at poolio.hxx:38:19
   35  	
   36  	static bool CompareSortablePoolItems(SfxPoolItem const* lhs, SfxPoolItem const* rhs)
   37  	{
-> 38  	    return (*lhs) < (*rhs);
   39  	}
   40  	/**
   41  	 * This array contains a set of SfxPoolItems, if those items are
Target 0: (soffice) stopped.
Comment 8 Julien Nabet 2019-05-13 07:09:14 UTC
(In reply to Alex Thurgood from comment #5)
> @Julien : is this a debug or non-debug enabled version ?
Yes it's a debug version (enable-dbgutil).
In fact, assertions are different from crash (even if it's the same effect), they happen only with debug builds.
Comment 9 Noel Grandin 2019-05-13 09:09:20 UTC
fix in progress

   https://gerrit.libreoffice.org/72222
Comment 10 Commit Notification 2019-05-13 13:19:17 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/0725e8a5d9add88b1289f5b1cb90b0b43059a734%5E%21

tdf#125215 Assertion when closing Database/Advanced Settings

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Julien Nabet 2019-05-13 19:54:51 UTC
Thank you Noel! I confirm it's fixed with master sources updated today.