tdf#125215 Assertion when closing Database/Advanced Settings

This showed up as a segfault for me.

Sometimes we have sortable items, for which we store duplicates (because
those items are not poolable), in which case comparing by operator==
means that we sometimes end up deleting the wrong one.

Change-Id: Ic7dff0357d3c5a7a74bf0b4e87fa02f2f5857f30
Reviewed-on: https://gerrit.libreoffice.org/72222
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>